Hide address book features

--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -1,19 +1,15 @@
 <html>
-
-<head>
+  <head>
     <style>
-        @import url(common.css);
-        @import url(index.css);
+      @import url(common.css);
+      @import url(index.css);
     </style>
     <script type="text/tiscript">
-            include "common.tis";
-            include "msgbox.tis";
-            include "ab.tis";
-            include "index.tis";
-        </script>
-</head>
+      include "common.tis";
+      include "msgbox.tis";
+      include "index.tis";
+    </script>
+  </head>
 
-<body>
-</body>
-
+  <body></body>
 </html>
